# PayLite

./: .env.example  .gitignore  main.py  paylite.db  pyproject.toml
alembic/: env.py
alembic/versions/: 48eeb9f42982_create_users_and_wallets_tables.py  7e4a7436e930_add_password_reset_token_table.py  94521130475d_add_transfers_table_and_wallet_.py
app/: exceptions.py  main.py
app/api/: auth.py  users.py  wallet.py
app/core/: config.py
app/db/: session.py
app/models/: __init__.py  password_reset_token.py  transfer.py  user.py  wallet.py
app/schemas/: password_reset.py  transfer.py  user.py  wallet.py
app/services/: auth_service.py  password_reset_service.py  user_service.py  wallet_service.py
tests/: conftest.py  test_auth.py  test_health.py  test_history.py  test_password_reset.py  test_sanity.py  test_transfers.py  test_users.py  test_wallet.py
